port student projects

--- a/code.html
+++ b/code.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Lukas Schmid</strong>, PhD<br />
 				Postdoctoral Fellow <br>
 				@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a>
@@ -49,7 +49,7 @@
 		<!-- Code -->
 		<section id="code">
 			<header class="major">
-				<h2>Open Source Code</h2>
+				<h1>Open Source Code</h1>
 			</header>
 			<p> I am a strong supporter of the open source idea and make most of my research and utility code available. In
 				particular, I try to pay attention to produce modular and re-usable to code to enable the community to extend
@@ -68,9 +68,7 @@
 
 		<!-- Mapping -->
 		<section id="mapping">
-			<header class="major">
-				<h2>Mapping</h2>
-			</header>
+			<h1>Mapping</h1>
 
 			<table>
 				<tr id="panopticmapping"> </tr>
@@ -80,9 +78,7 @@
 
 		<!-- Planning -->
 		<section id="planning">
-			<header class="major">
-				<h2>Planning</h2>
-			</header>
+			<h1>Planning</h1>
 
 			<table>
 				<tr id="active3d"> </tr>
@@ -95,9 +91,7 @@
 
 		<!-- Simulation -->
 		<section id="simulation">
-			<header class="major">
-				<h2>Simulation</h2>
-			</header>
+			<h1>Simulation</h1>
 
 			<table>
 				<tr id="unrealairsim"> </tr>
@@ -107,9 +101,7 @@
 
 		<!-- Utility -->
 		<section id="utility">
-			<header class="major">
-				<h2>Utility</h2>
-			</header>
+			<h1>Utility</h1>
 
 			<table>
 				<tr id="configutilities"> </tr>
@@ -118,49 +110,49 @@
 
 		<!-- Phenotyping -->
 		<section id="phenotyping">
-			<header class="major">
-				<h2>Phenotyping</h2>
-			</header>
+			<h1>Phenotyping</h1>
 
 			<table>
 				<tr id="pheno"> </tr>
 			</table>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
-					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-								class="label">Google Scholar</span></a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
-								class="label">Research Gate</span></a></li>
-					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Lukas Schmid</li>
-					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+	</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-		<script src="publications/opensourcecode.js"></script>
-		<script src="assets/js/build-opensource.js"></script>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
+				</li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
+			</ul>
+			<ul class="icons">
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
+							class="label">ORCID</span></a></li>
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
+							class="label">Research Gate</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Lukas Schmid</li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="publications/opensourcecode.js"></script>
+	<script src="assets/js/build-opensource.js"></script>
 
 </body>
 
