--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Lukas Schmid</strong>, PhD<br />
 				Postdoctoral Fellow <br>
 				@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a>
@@ -49,9 +49,10 @@
 		<!-- Publications -->
 		<section id="publications">
 			<header class="major">
-				<h2>Publications</h2>
+				<h1>Publications</h1>
 			</header>
-			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and other publications. <br>*Indicates I am a shared first author.</p>
+			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and other
+				publications. <br>*Indicates I am a shared first author.</p>
 
 			<ul class="actions fit">
 				<li><a href="#journals" class="button fit">Journals</a></li>
@@ -62,9 +63,7 @@
 		</section>
 
 		<section id="journals">
-			<header class="major">
-				<h2>Journals</h2>
-			</header>
+			<h1>Journals</h1>
 			<table id="tableJournals">
 				<tbody>
 				</tbody>
@@ -72,9 +71,7 @@
 		</section>
 
 		<section id="conferences">
-			<header class="major">
-				<h2>Conferences</h2>
-			</header>
+			<h1>Conferences</h1>
 			<table id="tableConferences">
 				<tbody>
 				</tbody>
@@ -82,9 +79,7 @@
 		</section>
 
 		<section id="preprints">
-			<header class="major">
-				<h2>Preprints</h2>
-			</header>
+			<h1>Preprints</h1>
 			<table id="tablePreprints">
 				<tbody>
 				</tbody>
@@ -92,61 +87,60 @@
 		</section>
 
 		<section id="other">
-			<header class="major">
-				<h2>Other</h2>
-			</header>
-
+			<h1>Other</h1>
 			<table id="tableOthers">
 				<tbody>
 				</tbody>
 			</table>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
-					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-								class="label">Google Scholar</span></a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
-								class="label">Research Gate</span></a></li>
-					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Lukas Schmid</li>
-					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+	</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
+				</li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
+			</ul>
+			<ul class="icons">
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
+							class="label">ORCID</span></a></li>
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
+							class="label">Research Gate</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Lukas Schmid</li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-		<!-- Import all jsons of publications and build tables. -->
-		<script src="publications/journals.js"></script>
-		<script src="publications/conferences.js"></script>
-		<script src="publications/preprints.js"></script>
-		<script src="publications/other.js"></script>
-		<script src="assets/js/build-publication.js"></script>
-		<script type="text/javascript">
-			buildTable(pubJournals, "tableJournals");
-			buildTable(pubConferences, "tableConferences");
-			buildTable(pubPreprints, "tablePreprints");
-			buildTable(pubOthers, "tableOthers");
-		</script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+	<!-- Import all jsons of publications and build tables. -->
+	<script src="publications/journals.js"></script>
+	<script src="publications/conferences.js"></script>
+	<script src="publications/preprints.js"></script>
+	<script src="publications/other.js"></script>
+	<script src="assets/js/build-publication.js"></script>
+	<script type="text/javascript">
+		buildTable(pubJournals, "tableJournals");
+		buildTable(pubConferences, "tableConferences");
+		buildTable(pubPreprints, "tablePreprints");
+		buildTable(pubOthers, "tableOthers");
+	</script>
 
 </body>
 
