--- a/students.html
+++ b/students.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Lukas Schmid</strong>, PhD<br />
 				Postdoctoral Fellow <br>
 				@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a>
@@ -49,44 +49,127 @@
 		<!-- Welcome -->
 		<section id="welcome">
 			<header class="major">
-				<h2>Welcome!</h2>
+				<h1>Teaching</h1>
 			</header>
-			<p> I'm a postodoctoral fellow
+			<p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching
+				exercise classes and lectures, I mainly contribute to this through the supervision of Master, Semester, and
+				Bachelor Theses.
 			</p>
+
+			<ul class="actions">
+				<li><a href="#lectures" class="button">Lectures</a></li>
+				<li><a href="#projects" class="button">Student Projects</a></li>
+			</ul>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
-					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-								class="label">Google Scholar</span></a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
-								class="label">Research Gate</span></a></li>
-					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Lukas Schmid</li>
-					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+		<!-- Lectures -->
+		<section id="lectures">
+			<h1>Lectures</h1>
+			<p> I was a teaching assistant for the following courses: </p>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+			<ul>
+				<!-- class="emphasized"> -->
+				<li><a
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"
+						target="_blank"><strong>Autonomous Mobile Robots</strong></a>, M.Sc. course at <a
+						href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a>, with <a
+						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
+						target="_blank">Prof. Roland Siegwart</a>. (2020, 2021, 2022)</li>
+
+				<li><a
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"
+						target="_blank"><strong>Perception and Learning for Robotics</strong></a>, M.Sc. course at <a
+						href="https://ethz.ch/de.html" target="_blank">ETH Zürich</a>, with <a
+						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
+						target="_blank">Prof. Roland Siegwart</a>. (2020, 2021, 2022)</li>
+
+				<li><a
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"
+						target="_blank"><strong>Advanced Machine Learning</strong></a>, M.Sc. course at <a
+						href="https://ethz.ch/de.html" target="_blank">ETH Zürich</a>, with <a
+						href="https://inf.ethz.ch/people/person-detail.buhmann.html" target="_blank">Prof. Joachim Buhmann</a>.
+					(2018)</li>
+			</ul>
+
+		</section>
+
+		<!-- Student Projects -->
+		<section id="projects">
+			<h1>Student Projects</h1>
+			<p> I regularly upload project proposals and also accept proactive applications of highly motivated students. If
+				you are interested in working on a project in the fields of robotic scene understanding, active perception, or
+				long-term and continual learning, please send a short CV and transcript to <a
+					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>.
+				<br /><br />
+				Examples of past projects:
+			</p>
+
+
+			<div class="row">
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/active_panoptic_mapping.jpg" class="image fit thumb"><img src="images/student_projects/active_panoptic_mapping.jpg" alt="" /></a>
+				</article>
+
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/consistent_panoptic_mapping.jpg" class="image fit thumb"><img src="images/student_projects/consistent_panoptic_mapping.jpg" alt="" /></a>
+				</article>
+
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/incremental_scenegraph_construction.jpg" class="image fit thumb"><img src="images/student_projects/incremental_scenegraph_construction.jpg" alt="" /></a>
+				</article>
+
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/neural_robotic_mapping.jpg" class="image fit thumb"><img src="images/student_projects/neural_robotic_mapping.jpg" alt="" /></a>
+				</article>
+					
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/scene_completion_for_exploration.jpg" class="image fit thumb"><img src="images/student_projects/scene_completion_for_exploration.jpg" alt="" /></a>
+				</article>
+
+				<article class="col-4 col-12-xsmall work-item">
+					<a href="images/student_projects/lidar_motion_detection.jpg" class="image fit thumb"><img src="images/student_projects/lidar_motion_detection.jpg" alt="" /></a>
+				</article>
+			</div>
+
+		</section>
+
+
+
+	</div>
+
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
+				</li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
+			</ul>
+			<ul class="icons">
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
+							class="label">ORCID</span></a></li>
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
+							class="label">Research Gate</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Lukas Schmid</li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
