--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Lukas Schmid</strong>, PhD<br />
 				Postdoctoral Fellow <br>
-				@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a>
+				@<a href="https://web.mit.edu/sparklab/" target="_blank">MIT-SPARK Lab</a>
 			</h1>
 		</div>
 	</header>
@@ -100,23 +100,24 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span class="label">Github</span></a>
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" target="_blank"><span
+							class="label">Github</span></a>
 				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-							class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-							class="label">Google Scholar</span></a></li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" target="_blank"
+						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" target="_blank"
+						class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
+				<li><a href="https://orcid.org/0000-0002-3961-8145" target="_blank" class="icon brands fa-orcid"><span
 							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" class="icon brands fa-researchgate"><span
-							class="label">Research Gate</span></a></li>
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" target="_blank"
+						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
 				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Original Design by <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
