update projects description

--- a/students.html
+++ b/students.html
@@ -101,8 +101,9 @@
 			<p> I regularly upload project proposals and also accept proactive applications of highly motivated students. If
 				you are interested in working on a project in the fields of robotic scene understanding, active perception, or
 				long-term and continual learning, please send a short CV and transcript to <a
-					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>.
-				<br /><br />
+					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are eligible for an MIT thesis project first.
+				<br />
+				<br />
 				Examples of past projects:
 			</p>
 
