update code for 3d vsg

--- a/code.html
+++ b/code.html
@@ -75,6 +75,7 @@
 			<table>
 				<tr id="panopticmapping"> </tr>
 				<tr id="neuralblox"> </tr>
+				<tr id="3dvsg"> </tr>
 			</table>
 		</section>
 
@@ -154,7 +155,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="publications/opensourcecode.js"></script>
+	<script src="publications/code.js"></script>
 	<script src="assets/js/build-opensource.js"></script>
 
 </body>
