Update ICRA paper

--- a/code.html
+++ b/code.html
@@ -15,6 +15,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<base target="_blank">
 </head>
 
 <body class="is-preload">
@@ -27,7 +28,7 @@
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" target="_blank">MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
@@ -126,24 +127,24 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" target="_blank"><span
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
 							class="label">Github</span></a>
 				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" target="_blank"
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
 						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" target="_blank"
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
 						class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145" target="_blank" class="icon brands fa-orcid"><span
+				<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
 							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" target="_blank"
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
 						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
 				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+				<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
