Fix navigation link targets

--- a/students.html
+++ b/students.html
@@ -21,12 +21,12 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
@@ -35,12 +35,11 @@
 	<!-- Navigation -->
 	<nav id="nav">
 		<ul>
-			<li><a class="icon solid fa-home" href="index.html">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html">Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html">Student Projects</a></li>
-			<li><a class="icon solid fa-code" href="code.html">Open Source Code</a></li>
-
+			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
+			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
+			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
 
@@ -53,7 +52,8 @@
 				<h1>Teaching</h1>
 			</header>
 			<p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching
-				exercise classes and lectures, I mainly contribute to this through the supervision of Master, Semester, and
+				exercise classes and lectures, I mainly contribute to this through the supervision of Master, Semester,
+				and
 				Bachelor Theses.
 			</p>
 
@@ -71,24 +71,24 @@
 			<ul>
 				<!-- class="emphasized"> -->
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"
-						><strong>Autonomous Mobile Robots</strong></a>, M.Sc. course at <a
-						href="https://ethz.ch/en.html" >ETH Zürich</a>, with <a
-						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-						>Prof. Roland Siegwart</a>. (2020, 2021, 2022)</li>
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"><strong>Autonomous
+							Mobile Robots</strong></a>, M.Sc. course at <a href="https://ethz.ch/en.html">ETH
+						Zürich</a>, with <a
+						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+						Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"
-						><strong>Perception and Learning for Robotics</strong></a>, M.Sc. course at <a
-						href="https://ethz.ch/de.html" >ETH Zürich</a>, with <a
-						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-						>Prof. Roland Siegwart</a>. (2020, 2021, 2022)</li>
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"><strong>Perception
+							and Learning for Robotics</strong></a>, M.Sc. course at <a
+						href="https://ethz.ch/de.html">ETH Zürich</a>, with <a
+						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+						Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"
-						><strong>Advanced Machine Learning</strong></a>, M.Sc. course at <a
-						href="https://ethz.ch/de.html" >ETH Zürich</a>, with <a
-						href="https://inf.ethz.ch/people/person-detail.buhmann.html" >Prof. Joachim Buhmann</a>.
+						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"><strong>Advanced
+							Machine Learning</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH
+						Zürich</a>, with <a href="https://inf.ethz.ch/people/person-detail.buhmann.html">Prof. Joachim
+						Buhmann</a>.
 					(2018)</li>
 			</ul>
 
@@ -97,10 +97,13 @@
 		<!-- Student Projects -->
 		<section id="projects">
 			<h1>Student Projects</h1>
-			<p> I regularly upload project proposals and also accept proactive applications of highly motivated students. If
-				you are interested in working on a project in the fields of robotic scene understanding, active perception, or
+			<p> I regularly upload project proposals and also accept proactive applications of highly motivated
+				students. If
+				you are interested in working on a project in the fields of robotic scene understanding, active
+				perception, or
 				long-term and continual learning, please send a short CV and transcript to <a
-					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are eligible for an MIT thesis project first.
+					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are eligible for an MIT
+				thesis project first.
 				<br />
 				<br />
 				Examples of past projects:
@@ -119,7 +122,8 @@
 				</article>
 
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/incremental_scenegraph_construction.jpg" class="image fit thumb"><img
+					<a href="images/student_projects/incremental_scenegraph_construction.jpg"
+						class="image fit thumb"><img
 							src="images/student_projects/incremental_scenegraph_construction.jpg" alt="" /></a>
 				</article>
 
@@ -147,24 +151,25 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
 							class="label">Github</span></a>
 				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
-						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
-						class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
 							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
 						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
+				</li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
