--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
@@ -37,11 +37,11 @@
 	<!-- Navigation -->
 	<nav id="nav">
 		<ul>
-			<li><a class="icon solid fa-home" href="index.html">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html">Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html">Student Projects</a></li>
-			<li><a class="icon solid fa-code" href="code.html">Open Source Code</a></li>
+			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
+			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
+			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
 
@@ -53,15 +53,20 @@
 			<header class="major">
 				<h1>Welcome!</h1>
 			</header>
-			<p> I'm a postodoctoral fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at the
-				<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department
+			<p> I'm a postodoctoral fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at
+				the
+				<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a
+					href="https://aeroastro.mit.edu/">Department
 					of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
 					Technology</a>.
 				<br /><br />
-				My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on active and
+				My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
+				active and
 				passive perception in changing environments for robotic interaction and augmented reality. This includes
-				building dense geometric and semantic representations, scene abstraction and understanding, lifelong learning
-				and mapping, and active path and interaction planning to build these representations autonomously and in unknown
+				building dense geometric and semantic representations, scene abstraction and understanding, lifelong
+				learning
+				and mapping, and active path and interaction planning to build these representations autonomously and in
+				unknown
 				environments.
 			</p>
 		</section>
@@ -79,8 +84,10 @@
 		<!-- Get in touch -->
 		<section id="getintouch">
 			<h1>Get In Touch</h1>
-			<p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to chat,
-				I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my best to
+			<p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to
+				chat,
+				I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my
+				best to
 				get back to you quickly. Please feel free reach out, looking forward to hearing from you!
 			</p>
 
@@ -117,24 +124,25 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
 							class="label">Github</span></a>
 				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
-						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
-						class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
 							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
 						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
+				</li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
