--- a/publications.html
+++ b/publications.html
@@ -21,26 +21,25 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
 	</header>
-	
+
 	<!-- Navigation -->
 	<nav id="nav">
 		<ul>
-			<li><a class="icon solid fa-home" href="index.html">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html">Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html">Student Projects</a></li>
-			<li><a class="icon solid fa-code" href="code.html">Open Source Code</a></li>
-
+			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
+			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
+			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
 
@@ -52,7 +51,8 @@
 			<header class="major">
 				<h1>Publications</h1>
 			</header>
-			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and other
+			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and
+				other
 				publications. <br>*Indicates I am a shared first author.</p>
 
 			<ul class="actions fit">
@@ -101,24 +101,25 @@
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
+				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
 							class="label">Github</span></a>
 				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
-						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
-						class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
+							class="label">Google Scholar</span></a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
+				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
 							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
+				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
 						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
+				</li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
+				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
