Fix button linking

--- a/code.html
+++ b/code.html
@@ -63,11 +63,11 @@
 			</p>
 
 			<ul class="actions fit">
-				<li><a href="#mapping" class="button fit">Mapping</a></li>
-				<li><a href="#planning" class="button fit">Planning</a></li>
-				<li><a href="#simulation" class="button fit">Simulation</a></li>
-				<li><a href="#utility" class="button fit">Utility</a></li>
-				<li><a href="#phenotyping" class="button fit">Phenotyping</a></li>
+				<li><a href="#mapping" class="button fit" target="_self">Mapping</a></li>
+				<li><a href="#planning" class="button fit" target="_self">Planning</a></li>
+				<li><a href="#simulation" class="button fit" target="_self">Simulation</a></li>
+				<li><a href="#utility" class="button fit" target="_self">Utility</a></li>
+				<li><a href="#phenotyping" class="button fit" target="_self">Phenotyping</a></li>
 			</ul>
 		</section>
 
