--- a/publications.html
+++ b/publications.html
@@ -56,10 +56,10 @@
 				publications. <br>*Indicates I am a shared first author.</p>
 
 			<ul class="actions fit">
-				<li><a href="#journals" class="button fit">Journals</a></li>
-				<li><a href="#conferences" class="button fit">Conferences</a></li>
-				<li><a href="#preprints" class="button fit">Preprints</a></li>
-				<li><a href="#other" class="button fit">Other</a></li>
+				<li><a href="#journals" class="button fit" target="_self">Journals</a></li>
+				<li><a href="#conferences" class="button fit" target="_self">Conferences</a></li>
+				<li><a href="#preprints" class="button fit" target="_self">Preprints</a></li>
+				<li><a href="#other" class="button fit" target="_self">Other</a></li>
 			</ul>
 		</section>
 
