--- a/students.html
+++ b/students.html
@@ -58,8 +58,8 @@
 			</p>
 
 			<ul class="actions">
-				<li><a href="#lectures" class="button">Lectures</a></li>
-				<li><a href="#projects" class="button">Student Projects</a></li>
+				<li><a href="#lectures" class="button" target="_self">Lectures</a></li>
+				<li><a href="#projects" class="button" target="_self">Student Projects</a></li>
 			</ul>
 		</section>
 
