Update news, code, and publications

--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@
 			</header>
 			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and
 				other
-				publications. <br>*Indicates I am a shared first author.</p>
+				publications. <br>*Indicates I am a second listed shared first author.</p>
 
 			<ul class="actions fit">
 				<li><a href="#journals" class="button fit" target="_self">Journals</a></li>
