--- a/code.html
+++ b/code.html
@@ -77,6 +77,7 @@
 
 			<table>
 				<tr id="panopticmapping"> </tr>
+				<tr id="dynablox"> </tr>
 				<tr id="neuralblox"> </tr>
 				<tr id="3dvsg"> </tr>
 			</table>
