--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<header class="major">
 				<h1>Welcome!</h1>
 			</header>
-			<p> I'm a postodoctoral fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at
+			<p> I'm a postdoctoral research fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at
 				the
 				<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a
 					href="https://aeroastro.mit.edu/">Department
