--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<ul class="labeled-icons">
 						<li>
 							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-							Room 32-D569<br />
+							Room 32-D712<br />
 							77 Massachusetts Avenue <br />
 							Cambridge, MA 02139, USA<br />
 						</li>
@@ -142,7 +142,7 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
