--- a/code.html
+++ b/code.html
@@ -16,6 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<base target="_blank">
+	<script defer data-domain="schmluk.github.io" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body class="is-preload">
