--- a/students.html
+++ b/students.html
@@ -14,7 +14,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<base target="_blank">
-	<script defer data-domain="schmluk.github.io" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body class="is-preload">
@@ -170,7 +169,7 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Lukas Schmid</li>
-				<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
