Add option for ghub buttons

--- a/code.html
+++ b/code.html
@@ -16,6 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<base target="_blank">
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body class="is-preload">
