--- a/code.html
+++ b/code.html
@@ -24,7 +24,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
@@ -112,6 +112,7 @@
 			<h1>Utility</h1>
 
 			<table>
+				<tr id="configutilities_new"> </tr>
 				<tr id="configutilities"> </tr>
 			</table>
 		</section>
