--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
