downsize image and update address

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<ul class="labeled-icons">
 						<li>
 							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-							Room 32-D712<br />
+							Room 45-601N<br />
 							77 Massachusetts Avenue <br />
 							Cambridge, MA 02139, USA<br />
 						</li>
