--- a/code.html
+++ b/code.html
@@ -41,7 +41,7 @@
 			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
 			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
 			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
 			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
@@ -54,11 +54,11 @@
 			<header class="major">
 				<h1>Open Source Code</h1>
 			</header>
-			<p> I am a strong supporter of the open source idea and make most of my research and utility code available.
+			<p> I am a strong supporter of the open source idea and make virtually all of my research and utility code available.
 				In
 				particular, I try to pay attention to produce modular and re-usable to code to enable the community to
 				extend
-				and build upon the existing frameworks. Please feel free to use, re-use, modify, or contribute to any of
+				and build upon the existing frameworks. So far, my software has received over 2k stars and 300 forks on github. Please be invited to use, re-use, modify, and contribute to any of
 				the
 				projects!
 			</p>
@@ -77,8 +77,9 @@
 			<h1>Mapping</h1>
 
 			<table>
-				<tr id="panopticmapping"> </tr>
+				<tr id="khronos"> </tr>
 				<tr id="dynablox"> </tr>
+				<tr id="panopticmapping"> </tr>
 				<tr id="neuralblox"> </tr>
 				<tr id="3dvsg"> </tr>
 			</table>
