--- a/students.html
+++ b/students.html
@@ -38,7 +38,7 @@
 			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
 			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
 			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
 			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
@@ -51,10 +51,10 @@
 			<header class="major">
 				<h1>Teaching</h1>
 			</header>
-			<p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching
-				exercise classes and lectures, I mainly contribute to this through the supervision of Master, Semester,
+			<p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching lectures and
+				exercise classes, I strongly contribute to this through the supervision of Master, Semester,
 				and
-				Bachelor Theses.
+				Bachelor Theses, or other research projects.
 			</p>
 
 			<ul class="actions">
@@ -66,29 +66,38 @@
 		<!-- Lectures -->
 		<section id="lectures">
 			<h1>Lectures</h1>
-			<p> I was a teaching assistant for the following courses: </p>
+			<p> I was a guest lecturer and/or teaching assistantfor the following courses: </p>
 
 			<ul>
 				<!-- class="emphasized"> -->
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"><strong>Autonomous
-							Mobile Robots</strong></a>, M.Sc. course at <a href="https://ethz.ch/en.html">ETH
-						Zürich</a>, with <a
-						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-						Roland Siegwart</a>. (2020, 2021, 2022)</li>
+					href="https://github.com/UMich-CURLY-teaching/UMich-ROB-530-public"><strong>Mobile Robotics: Methods and Algorithms</strong></a>, Graduate course at <a href="https://robotics.umich.edu/">University of Michigan</a>, with <a
+					href="https://robotics.umich.edu/profile/maani-ghaffari/">Prof.
+					Maani Ghaffari</a>. (2024)</li>
+				<li><a
+					href="https://vnav.mit.edu/"><strong>Visual Navigation for Autonomous
+						Vehicles</strong></a>, Graduate course at <a href="https://www.mit.edu/">MIT</a>, with <a
+					href="https://lucacarlone.mit.edu/">Prof.
+					Luca Carlone</a>. (2023)</li>
+				<li><a
+					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"><strong>Autonomous
+						Mobile Robots</strong></a>, M.Sc. course at <a href="https://ethz.ch/en.html">ETH
+					Zürich</a>, with <a
+					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+					Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"><strong>Perception
-							and Learning for Robotics</strong></a>, M.Sc. course at <a
-						href="https://ethz.ch/de.html">ETH Zürich</a>, with <a
-						href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-						Roland Siegwart</a>. (2020, 2021, 2022)</li>
+					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"><strong>Perception
+						and Learning for Robotics</strong></a>, M.Sc. course at <a
+					href="https://ethz.ch/de.html">ETH Zürich</a>, with <a
+					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+					Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
 				<li><a
-						href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"><strong>Advanced
-							Machine Learning</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH
-						Zürich</a>, with <a href="https://inf.ethz.ch/people/person-detail.buhmann.html">Prof. Joachim
-						Buhmann</a>.
+					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"><strong>Advanced
+						Machine Learning</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH
+					Zürich</a>, with <a href="https://inf.ethz.ch/people/person-detail.buhmann.html">Prof. Joachim
+					Buhmann</a>.
 					(2018)</li>
 			</ul>
 
@@ -97,13 +106,13 @@
 		<!-- Student Projects -->
 		<section id="projects">
 			<h1>Student Projects</h1>
-			<p> I regularly upload project proposals and also accept proactive applications of highly motivated
+			<p> I have supervised over 45 students in individual projects and theses. I regularly upload project proposals and also accept proactive applications of highly motivated
 				students. If
 				you are interested in working on a project in the fields of robotic scene understanding, active
 				perception, or
 				long-term and continual learning, please send a short CV and transcript to <a
-					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are eligible for an MIT
-				thesis project first.
+					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are accepted/eligible for an MIT
+				project first.
 				<br />
 				<br />
 				Examples of past projects:
