--- a/code.html
+++ b/code.html
@@ -18,6 +18,15 @@
 	<base target="_blank">
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RKGKPT9DC6');
+</script>
 
 <body class="is-preload">
 
