--- a/publications.html
+++ b/publications.html
@@ -15,6 +15,15 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<base target="_blank">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RKGKPT9DC6');
+</script>
 
 <body class="is-preload">
 
